[gd_scene load_steps=5 format=3 uid="uid://bgmgqdouxebll"]

[ext_resource type="Script" uid="uid://komj7nyv06oh" path="res://base_human.gd" id="1_4ucnw"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_34ffg"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4ucnw"]
radius = 0.517652
height = 2.07274

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_mdtil"]
radius = 3.50363
height = 9.66309

[node name="base_human" type="CharacterBody3D" groups=["Human", "Interactable"]]
script = ExtResource("1_4ucnw")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.261884, 0)
mesh = SubResource("CapsuleMesh_34ffg")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00091821, 0.290228, 0)
shape = SubResource("CapsuleShape3D_4ucnw")

[node name="dialogue_range" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="dialogue_range"]
shape = SubResource("CapsuleShape3D_mdtil")

[connection signal="body_entered" from="dialogue_range" to="." method="_on_dialogue_range_body_entered"]
[connection signal="body_exited" from="dialogue_range" to="." method="_on_dialogue_range_body_exited"]
